#BestCodeEver multiple sign in page

--- a/Web/loginpage/public/index.html
+++ b/Web/loginpage/public/index.html
@@ -30,7 +30,7 @@
           firebase.auth.EmailAuthProvider.PROVIDER_ID
         ],
         // Terms of service url.
-        'tosUrl': 'https://briclanguage.com/tos/',
+        'tosUrl': '<https://briclanguage.com/tos/>',
       };
 
       // Initialize the FirebaseUI Widget using Firebase.
