--- a/Web/Firebase/bric-playback.html
+++ b/Web/Firebase/bric-playback.html
@@ -24,11 +24,6 @@
         </style>
     </head>
     <body>
-
-
-        <progress value="0" max="100" id="uploader">0%</progress>
-        <input type="file" value="upload" id="fileButton"/>
-
         <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
         <script>
             // Initialize Firebase
@@ -40,34 +35,9 @@
                 messagingSenderId: "144009791835"
             };
             firebase.initializeApp(config);
-
-            var uploader = document.getElementById("uploader");
-            var fileButton = document.getElementById("fileButton")
-
-            fileButton.addEventListener('change', function(e) {
-
-                var file = e.target.files[0];
-
-                var storageref = firebase.storage().ref('fathers_day/' + file.name);
-
-                var task = storageref.put(file);
-
-                task.on('state_changed',
-
-                        function progress(snapshot) {
-                    var percentage = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-                    uploader.value = percentage;
-                },
-                        function error(err) {
-
-                },
-                        function complete() {
-
-                }
-
-                       );
-
-            });
+            
+            var ref = firebase.database().ref.child("fathers_day").child("1.mp4");
+            
         </script>
     </body>
 </html>
