#BestCodeEver fb sing in with email

--- a/Web/loginpage/public/index.html
+++ b/Web/loginpage/public/index.html
@@ -4,7 +4,6 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Sample FirebaseUI App</title>
    <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
 	<script>
 	  // Initialize Firebase
@@ -21,22 +20,26 @@
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/live/0.5/firebase-ui-auth.css" />
     <script type="text/javascript">
       // FirebaseUI config.
-      var uiConfig = {
-        'signInSuccessUrl': '<url-to-redirect-to-on-success>',
-        'signInOptions': [
-          // Leave the lines as is for the providers you want to offer your users.
-          firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-          firebase.auth.FacebookAuthProvider.PROVIDER_ID,
-          firebase.auth.EmailAuthProvider.PROVIDER_ID
-        ],
-        // Terms of service url.
-        'tosUrl': '<https://briclanguage.com/tos/>',
-      };
+
+
 
       // Initialize the FirebaseUI Widget using Firebase.
       var ui = new firebaseui.auth.AuthUI(firebase.auth());
       // The start method will wait until the DOM is loaded.
-      ui.start('#firebaseui-auth-container', uiConfig);
+
+
+      ui.start('#firebaseui-auth-container', {
+        'signInOptions': [
+          {
+            provider: firebase.auth.FacebookAuthProvider.PROVIDER_ID,
+            scopes: [
+              'public_profile',
+              'email'
+            ]
+          },
+        ]
+      });
+
     </script>
   </head>
   <body>
