--- a/Web/Firebase/bric-upload.html
+++ b/Web/Firebase/bric-upload.html
@@ -55,6 +55,13 @@
             }
             #uploader {
                 margin-bottom: 15px;
+                background-color: #000000;
+                border: 0;
+                height: 18px;
+                border-radius: 9px;
+                margin-left: 3%;
+                margin-top: 170px;
+                
             }
             #uploadHeader {
                 margin-top: 50px;
@@ -63,9 +70,7 @@
             }
         </style>
     </head>
-    <body>
-
-
+    <body onload="upload()">
 
         <div id="color-bar">
             <div id="nav-bar"></div>
@@ -77,7 +82,7 @@
                 <div class="file_input">
                     <label class="image_input_button mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect mdl-button--colored" id="someLabel">
                         <i class="material-icons">file_upload</i>
-                        <input id="file_input_file" class="none" type="file" />
+                        <input id="file_input_file" class="none" type="file"/>
                     </label>
                 </div>
                 <div id="file_input_text_div" class="mdl-textfield mdl-js-textfield textfield-demo">
@@ -85,6 +90,8 @@
                     <label class="mdl-textfield__label" for="file_input_text"></label>
                 </div>
             </div>
+            <progress value="0" max="100" id="uploader">0%</progress>
+
         </div>
         <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
         <script src="bric-app.js"></script>
@@ -154,6 +161,6 @@ console.log(k);
 
 </script>
 -->
-</body>
+    </body>
 </html>
 
