--- a/Web/Firebase/y/index.html
+++ b/Web/Firebase/y/index.html
@@ -54,6 +54,10 @@
             #logo {
                 margin-left: 33%;
             }
+            #agreement {
+                text-align: center;
+                margin-bottom: 40px;
+            }
         </style>
         <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
         <script src="https://www.gstatic.com/firebasejs/ui/live/0.5/firebase-ui-auth.js"></script>
@@ -75,6 +79,7 @@
             <div id="stuff">
 
                 <img id="logo" src="images/BRIC%20LIVE%20app%20logo.png" style="width:200px;height:200;">
+                <h6 id="agreement">Welcome to the BRIC Live app! We hope you're down to share some awesome content with us and bring out the best of BKLN. But just know that you're responsible for the things you upload so don't fuhgeddaboutit.</h6>
                 <div id="firebaseui-auth-container"></div>
 
             </div>
